--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if signed_in? %>
-  <%= render 'signed_in' %>
+  <%= render 'static_pages/signed_in' %>
 <% else %>
-  <%= render 'signed_out' %>
+  <%= render 'static_pages/signed_out' %>
 <% end %>
